plugins {
    id "com.gradle.plugin-publish" version "0.15.0"
    id "java-gradle-plugin"
    id "com.github.johnrengelman.shadow" version "7.0.0"
}

group "com.github.boginw"
version "0.2.0-SNAPSHOT"

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(11))
    }
}

gradlePlugin {
    plugins {
        migrationsPlugin {
            id = "com.github.boginw.mybatis-migrations"
            implementationClass = "com.github.boginw.mybatis_migrations.MigrationsPlugin"
        }
    }
}

pluginBundle {
    website = "https://github.com/boginw/migrations-gradle-plugin"
    vcsUrl = "https://github.com/boginw/migrations-gradle-plugin"
    description = "Run MyBatis Migrations commands through Gradle"
    plugins {
        migrationsPlugin {
            displayName = "MyBatis Migrations Plugin"
            tags = ["tool", "database", "mybatis", "migrations"]
            version = "0.2.0"
        }
    }

    mavenCoordinates {
        groupId = "com.github.boginw"
        artifactId = "mybatis-migrations"
        version = "0.2.0"
    }
}

dependencies {
    compileOnly(gradleApi())
    testImplementation gradleTestKit()
    implementation "org.mybatis:mybatis-migrations:3.3.9"
    testImplementation platform("org.junit:junit-bom:5.7.2")
    testImplementation "org.junit.jupiter:junit-jupiter-api"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
    testImplementation "org.mockito:mockito-core:3.+"
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
